--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
     "actify": "^0.2.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
